<resources>
    <string name="app_name">Speaky</string>
    <string name="copyright">©Copyright by Big Hero 6</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">Riwayat</string>
    <string name="title_practice">Praktik</string>
    <string name="title_profile">Profil</string>
    <string name="daftar_disini">Daftar di sini.</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk di sini</string>
    <string name="password_not_valid">Password kurang dari 6 karakter!</string>
    <string name="email_not_valid">Format email tidak valid!</string>
    <string name="password_not_same">Password tidak sama!</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="running_text">running…</string>
    <string name="halo">Halo</string>
    <string name="your_last_score">Skor Terakhir Kamu</string>
    <string name="score">0</string>
    <string name="mulai_tes">Ikuti ujian lagi</string>
    <string name="nama">Nama</string>
    <string name="sign_out">Keluar</string>
    <string name="agree">Setuju dan Lanjut</string>
    <string name="term">Syarat dan Ketentuan</string>
    <string name="detail_term">Dengan mengunduh atau menggunakan aplikasi, persyaratan ini akan berlaku secara otomatis untuk Anda – karena itu Anda harus memastikan bahwa Anda membacanya dengan cermat sebelum menggunakan aplikasi.\n
        Anda tidak diizinkan untuk menyalin, atau memodifikasi aplikasi, bagian mana pun dari aplikasi, atau merek dagang kami dengan cara apa pun.
        Anda tidak boleh mencoba mengekstrak kode sumber aplikasi, dan Anda juga tidak boleh mencoba menerjemahkan aplikasi ke bahasa lain, atau membuat versi turunan.
        Aplikasi itu sendiri, dan semua merek dagang, hak cipta, hak basis data, dan hak kekayaan intelektual lainnya yang terkait dengannya, masih menjadi milik Big Hero 6.\n
        Big Hero 6 berkomitmen untuk memastikan bahwa aplikasi ini berguna dan berjalan seefisien mungkin.
        Untuk alasan itu, kami berhak untuk membuat perubahan pada aplikasi atau membebankan biaya untuk layanannya, kapan saja dan untuk alasan apa pun.
        Kami tidak akan pernah menagih Anda untuk aplikasi atau layanannya tanpa menjelaskan dengan jelas kepada Anda apa yang Anda bayar.\n
        Aplikasi Speaky menyimpan dan memproses data pribadi yang telah Anda berikan kepada kami, untuk menyediakan Layanan saja.
        Anda bertanggung jawab untuk menjaga keamanan ponsel dan akses ke aplikasi.
        Oleh karena itu, kami menyarankan Anda untuk tidak melakukan jailbreak atau root pada ponsel Anda, yang merupakan proses menghilangkan batasan perangkat lunak yang diberlakukan oleh sistem operasi resmi perangkat Anda.
        Hal itu bisa membuat ponsel Anda rentan terhadap malware/virus/program jahat, membahayakan fitur keamanan ponsel Anda dan itu bisa berarti bahwa aplikasi Speaky tidak akan berfungsi dengan baik atau tidak berfungsi sama sekali.\n
        Aplikasi ini menggunakan layanan pihak ketiga yang menyatakan Syarat dan Ketentuan mereka sendiri.\n</string>
    <string name="term2">Tautan ke Syarat dan Ketentuan penyedia layanan pihak ketiga yang digunakan oleh aplikasi</string>
    <string name="detail_term2">
        •	Google Analytics for Firebase/n
        Anda harus menyadari bahwa ada hal-hal tertentu yang tidak akan menjadi tanggung jawab Big Hero 6. Fungsi aplikasi tertentu akan mengharuskan aplikasi memiliki koneksi internet aktif. Koneksi dapat berupa Wi-Fi, atau disediakan oleh penyedia jaringan seluler Anda, tetapi Big Hero 6 tidak dapat bertanggung jawab atas aplikasi yang tidak berfungsi penuh jika Anda tidak memiliki akses ke Wi-Fi, dan Anda tidak memilikinya sisa kuota data Anda.\n
        Jika Anda menggunakan aplikasi di luar area dengan Wi-Fi, Anda harus ingat bahwa persyaratan perjanjian Anda dengan penyedia jaringan seluler Anda akan tetap berlaku. Akibatnya, Anda mungkin dikenakan biaya oleh penyedia seluler Anda untuk biaya data selama koneksi saat mengakses aplikasi, atau biaya pihak ketiga lainnya. Dalam menggunakan aplikasi, Anda menerima tanggung jawab atas biaya tersebut, termasuk biaya data roaming jika Anda menggunakan aplikasi di luar wilayah asal Anda (yaitu wilayah atau negara) tanpa menonaktifkan roaming data. Jika Anda bukan pembayar tagihan untuk perangkat tempat Anda menggunakan aplikasi, perlu diketahui bahwa kami berasumsi bahwa Anda telah menerima izin dari pembayar tagihan untuk menggunakan aplikasi.\n
        Sejalan dengan itu, Big Hero 6 tidak dapat selalu bertanggung jawab atas cara Anda menggunakan aplikasi yaitu Anda perlu memastikan bahwa perangkat Anda tetap terisi daya – jika baterai habis dan Anda tidak dapat menyalakannya untuk memanfaatkan Layanan, Big Hero 6 tidak dapat menerima tanggung jawab.\n
        Sehubungan dengan tanggung jawab Big Hero 6 atas penggunaan aplikasi oleh Anda, saat Anda menggunakan aplikasi, penting untuk diingat bahwa meskipun kami berusaha untuk memastikan bahwa itu diperbarui dan benar setiap saat, kami mengandalkan pihak ketiga untuk memberikan informasi kepada kami sehingga kami dapat menyediakannya untuk Anda. Big Hero 6 tidak bertanggung jawab atas kerugian apa pun, langsung atau tidak langsung, yang Anda alami sebagai akibat dari mengandalkan sepenuhnya fungsi aplikasi ini.\n
        Pada titik tertentu, kami mungkin ingin memperbarui aplikasi. Aplikasi saat ini tersedia di Android – persyaratan untuk sistem (dan untuk sistem tambahan apa pun yang kami putuskan untuk memperpanjang ketersediaan aplikasi) dapat berubah, dan Anda harus mengunduh pembaruan jika ingin tetap menggunakan aplikasi. Big Hero 6 tidak menjanjikan akan selalu memperbarui aplikasi sehingga relevan dengan Anda dan/atau bekerja dengan versi Android yang telah Anda instal di perangkat Anda. Namun, Anda berjanji untuk selalu menerima pembaruan aplikasi saat ditawarkan kepada Anda, Kami mungkin juga ingin berhenti menyediakan aplikasi, dan dapat menghentikan penggunaannya kapan saja tanpa memberikan pemberitahuan penghentian kepada Anda. Kecuali jika kami memberi tahu Anda sebaliknya, setelah penghentian apa pun, (a) hak dan lisensi yang diberikan kepada Anda dalam persyaratan ini akan berakhir; (b) Anda harus berhenti menggunakan aplikasi, dan (jika perlu) menghapusnya dari perangkat Anda.
    </string>
    <string name="term3">Perubahan Syarat dan Ketentuan</string>
    <string name="detail_term3">
        Big Hero 6 dapat dan berhak memperbarui Syarat dan Ketentuan kami dari waktu ke waktu. Oleh karena itu, Anda disarankan untuk meninjau halaman ini secara berkala untuk setiap perubahan. Saya akan memberi tahu Anda tentang perubahan apa pun dengan memposting Syarat dan Ketentuan baru di halaman ini.\n
        Syarat dan ketentuan ini berlaku mulai 2021-06-09.</string>
    <string name="term4">Hubungi Kami</string>
    <string name="detail_term4">
        Jika Anda memiliki pertanyaan atau saran tentang Syarat dan Ketentuan kami, jangan ragu untuk menghubungi kami di m0040332@bangkit.academy.</string>
    <string name="accept">Setuju dan lanjut</string>
    <string name="title_dashboard">Beranda</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="level">Level:</string>
    <string name="xxx">xxx</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="peringkat">Peringkat</string>
    <string name="weekly_schedule">Jadwal mingguan</string>
    <string name="teori">Teori</string>
    <string name="judul_teori">Judul Teori</string>
    <string name="complete_teori">Selesaikan proses belajarmu, yuk!</string>
    <string name="selesai">Selesai</string>
    <string name="title_module">Modul</string>
    <string name="title_modul_pembelajaran">Modul Pembelajaran</string>
    <string name="deskripsi_module_fragment">Belajar dari modul pembelajaran yang dilengkapi praktek interaktif.</string>
    <string name="continue_module">Lanjutkan pembelajaranmu</string>
    <string name="title_submodule">Submodul</string>
    <string name="search_another_module">Cari modul lainnya</string>
    <string name="title_practice_fragment">Praktik Secara Langsung</string>
    <string name="desc_practice_fragment">Latih teknik public speakingmu dengan mengikuti instruksi yang tersedia.</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="subscribe">Langganan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="faq">FAQ</string>
    <string name="help">Bantuan</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="hapus_akun">Hapus akun</string>
    <string name="free_user">Free</string>
    <string name="premium_user">Premium</string>
    <string name="username">Username</string>
    <string name="next">Selanjutnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_tes">Pilih paket tes yang ingin kamu coba.</string>
    <string name="your_score">Skor kamu</string>
    <string name="rekomendasi_modul">Rekomendasi Modul</string>
    <string name="rekomendasi_praktek">Rekomendasi Praktek</string>
    <string name="title_guide">Petunjuk Ujian</string>
    <string name="start">Mulai</string>
    <string name="sisa_waktu">Sisa Waktu</string>
    <string name="dimulai_dalam">Dimulai dalam</string>
    <string name="_5">5</string>
    <string name="detik">Detik</string>
    <string name="complete_your_profile">Lengkapi profilmu</string>
    <string name="edit_your_profile">Edit profilmu</string>
    <string name="update">Perbarui</string>
    <string name="galeri_kelas">Galeri Kelas</string>
    <string name="buka_modul">Buka modul</string>
    <string name="sign_out_message">Apakah anda yakin ingin keluar?</string>
    <string name="delete">Hapus Akun</string>
    <string name="delete_message">Apakah anda yakin ingin menghapus akun anda?</string>
    <string name="yes">Ya</string>
    <string name="tidak">Batal</string>
    <string name="buka_praktik">Buka Praktik</string>
    <string name="skor">Skor</string>
    <string name="waktu">Waktu</string>
    <string name="jenis_jenis_pembawaan">Jenis-jenis Pembawaan</string>
    <string name="gaya_pembawaan_public_speaking">Gaya Pembawaan Public Speaking</string>
    <string name="duration">30 detik</string>
    <string name="praktik_terkunci">Praktik terkunci</string>
    <string name="modul_terkunci">Modul terkunci</string>
    <string name="prev">Sebelumnya</string>
    <string name="subscribe_message">Kamu yakin ingin berlangganan?</string>
    <string name="ganti_foto">Ganti foto</string>
</resources>