<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.TermActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/regularText"
                android:textSize="20sp"
                android:text="@string/term"/>
            <TextView
                style="@style/regularTextThin"
                android:lineSpacingExtra="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/detail_term"
                android:textSize="14sp"/>
            <TextView
                style="@style/regularText"
                android:textSize="20sp"
                android:text="@string/term2"/>
            <TextView
                style="@style/regularTextThin"
                android:textSize="14sp"
                android:lineSpacingExtra="5dp"
                android:text="@string/detail_term2"/>
            <TextView
                style="@style/regularText"
                android:textSize="20sp"
                android:text="@string/term3"/>
            <TextView
                style="@style/regularTextThin"
                android:textSize="14sp"
                android:lineSpacingExtra="5dp"
                android:text="@string/detail_term3"/>
            <TextView
                style="@style/regularText"
                android:textSize="20sp"
                android:text="@string/term4"/>
            <TextView
                style="@style/regularTextThin"
                android:textSize="14sp"
                android:lineSpacingExtra="5dp"
                android:text="@string/detail_term4"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_accept"
        style="@style/customButton"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/agree"/>

</LinearLayout>