<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/blue_200"
    tools:context=".ui.detail.user.tou.TouActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/regularText"
            android:textSize="20sp"
            android:text="@string/term"/>
        <TextView
            style="@style/regularTextThin"
            android:lineSpacingExtra="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/detail_term"
            android:textSize="14sp"/>
        <TextView
            style="@style/regularText"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/term2"/>
        <TextView
            style="@style/regularTextThin"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/detail_term2"/>
        <TextView
            style="@style/regularText"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/term3"/>
        <TextView
            style="@style/regularTextThin"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/detail_term3"/>
        <TextView
            style="@style/regularText"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/term4"/>
        <TextView
            style="@style/regularTextThin"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/detail_term4"/>

    </LinearLayout>

</ScrollView>