<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bighero.speaky.ui.home.fragment.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_module"
        android:name="com.bighero.speaky.ui.home.fragment.module.ModuleFragment"
        android:label="@string/title_module"
        tools:layout="@layout/fragment_module"/>

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.bighero.speaky.ui.home.fragment.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bighero.speaky.ui.home.fragment.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bighero.speaky.ui.home.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>


</navigation>