<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:backgroundTint="@color/blue_700">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/regularTextWhite"
                android:text="@string/your_score" />

            <TextView
                android:id="@+id/score"
                style="@style/titleTextWhite"
                android:text="@string/score"
                android:textSize="96sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/regularTextWhite"
                    android:text="@string/level"/>
                <TextView
                    android:id="@+id/detail_level"
                    style="@style/regularTextWhite"
                    android:layout_marginStart="5dp"
                    android:text="@string/xxx" />
            </LinearLayout>

            <TextView
                style="@style/regularTextWhite"
                android:layout_marginTop="10dp"
                android:text="@string/peringkat"
                android:textSize="16sp"
                android:background="@drawable/tv_custom"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            style="@style/regularTextGray"
            android:textSize="16sp"
            android:text="@string/rekomendasi_modul"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_teori"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/dashboard_list"/>
        <TextView
            style="@style/regularTextGray"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/rekomendasi_praktek"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_praktek"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/dashboard_list"/>
    </LinearLayout>

</LinearLayout>