<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stateListAnimator="@android:anim/slide_in_left"
    tools:context=".ui.login.fragment.RegisterFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="238dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_email"
        style="@style/inputBox"
        android:layout_marginTop="30dp"
        android:hint="@string/e_mail"
        android:importantForAutofill="auto"
        android:autofillHints="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_password"
        style="@style/inputBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/inputBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_register"
        style="@style/customButton"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

    <TextView
        android:id="@+id/sudah_akun"
        style="@style/regularText"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:text="@string/sudah_punya_akun"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/masuk_disini"
        style="@style/regularText"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/masuk_disini"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/sudah_akun"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>